kubernetes/ruksms-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruksms-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ruksms-api
  template:
    metadata:
      name: ruksms-api-pod
      labels:
        app: ruksms-api
    spec:
      containers:
        - name: ruksms-api
          image: ruksms-api:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: ruksms-api-service
spec:
  type: ClusterIP
  selector:
    app: ruksms-api
  ports:
    - port: 80
      targetPort: 4000
