kubernetes/ruksms-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruksms-ui-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ruksms-ui
  template:
    metadata:
      name: ruksms-ui-pod
      labels:
        app: ruksms-ui
    spec:
      containers:
        - name: ruksms-ui
          image: ruksms-ui:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: ruksms-ui-service
spec:
  type: ClusterIP
  selector:
    app: ruksms-ui
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ruksms-ui-service-node-port
spec:
  type: NodePort
  selector:
    app: ruksms-ui
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30002
